Fix template relative resolution mechanism not working with jar URLs